update model user with username, back de la show, validations

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,6 +4,6 @@
   <%= f.input :name %>
   <%= f.input :description %>
   <%= f.input :places, as: :numeric %>
-  <%= f.input :category, collection: List::CATEGORY %>
+  <%= f.input :category %>
   <%= f.submit %>
 <% end %>
