--- a/app/assets/stylesheets/components/_signup.scss
+++ b/app/assets/stylesheets/components/_signup.scss
@@ -15,7 +15,7 @@
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   color: white;
-  height: 500px;
+  height: 560px;
   width: 350px;
   border-radius: 20px;
 
@@ -35,6 +35,7 @@
     border: 1px solid white;
     border-radius: 5px;
     margin: 20px;
+    margin-top: 10px;
     margin-bottom: 5px;
     transition: 0.2s ease-in-out;
   }
