--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,30 @@
   font-family: 'Gilroy';
 }
 
+@font-face {
+  font-family: 'Gilroy';
+  src: url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf),
+       url(Gilroy-UltraLightItalic.otf);
+}
+
 
 a {
   text-decoration: none;
