Bacckground job + Guest ID + UsernameSize

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,6 +3,7 @@
 <p>created by: <%= @list.user.email %></p>
 <p>Shotgunnerz :</p>
 <% @list.listed_users.each do |user| %>
-  <%= user.username == nil ? user.email : user.username %>
+  <%=  user.username == nil ? user.email : user.username %>
 <% end %>
+<%= @list.shotguns.count %>
 <%= check_show %>
