--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,3 +34,27 @@
     </div>
   </div>
 </div>
+
+<div class="tanki-navbar">
+  <div class="tanki-navbar-container">
+  <div class="row d-flex align-items-center mx-0 w-100 py-3">
+    <div class="col-2 px-0">
+      <div class="tanki-burger-menu-container">
+        <div class="tanki-burger-menu-white-square">
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
+    </div>
+    <div class="col-8 px-0">
+      <%= link_to lists_path do %>
+        <div class="tanki-navbar-logo-container">
+          <div class="shotgun-logo-navbar">
+            <h3>Shotgun</h3>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-2 px-0"></div>
+    </div>
+  </div>
+</div>
