--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,11 @@
 <h1>List name: <%= @list.name %></h1>
 <p>Description: <%= @list.description %></p>
 <p>created by: <%= @list.user.email %></p>
+<p>Available spots: <%= @list.places %></p>
+<p>Shotguns: <%= @list.shotguns.count %> </p>
 <p>Shotgunnerz :</p>
-<% @list.listed_users.each do |user| %>
-  <%=  user.username == nil ? user.email : user.username %>
+<% @list.shotguns.each do |shotgun| %>
+    <%=  shotgun.user_id.nil? ? "Guest User" : shotgun.user.username %>
 <% end %>
-<%= @list.shotguns.count %>
+
 <%= check_show %>
