--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,37 +1,39 @@
 <div class="alexis-create-form-main-container">
   <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-  <div>
-    <div class="col-md-5 mx-auto w-80">
-      <div class="card-container">
         <div class="alexis-create-form-card">
           <div class="title mb-3">
             <h1>Create a new List</h1>
           </div>
             <%= simple_form_for(@list) do |f| %>
-              <%= f.input :name, label: "List name 📋"%>
-              <%= f.input :description, as: :text, input_html: { maxlength: 280 }, label: "Description (Max. 280 Chars 🤓)" %>
-              <%= f.input :places, as: :numeric, label: "Spots available 🏆" %>
-              <%= f.input :prebookspot, as: :boolean %>
-              <div id="DateBoxes">
-                <p>Duration</p>
-                <%= f.text_field :start_time, placeholder: "Opens", input_html: { id: "range_start" }, data: {
-                    controller: "flatpickr",
-                    altInput: true,
-                    flatpickr_enable_time: true,
-                    flatpickr_mode: 'range',
-                    flatpickr_date_format: "Y-m-d H:i",
-                    flatpickr_min_Date: "today",
-                  } %>
-                <%= f.text_field :end_time, input_html: { id: "range_end" }, placeholder: "Closes", id: 'secondRangeInput' %>
+              <div class="create-form-element">
+                <%= f.input :name, label: "List name 📋"%>
+                <%= f.input :description, as: :text, input_html: { maxlength: 280 }, label: "Description (Max. 280 Chars 🤓)" %>
+                <%= f.input :places, as: :numeric, label: "Spots available 🏆" %>
+                <%= f.input :prebookspot, as: :boolean %>
+                <div id="DateBoxes">
+                  <p>Duration</p>
+                  <div class="datesetup">
+                    <div class="start-time">
+                      <%= f.text_field :start_time, placeholder: "Opens", input_html: { id: "range_start" }, data: {
+                          controller: "flatpickr",
+                          altInput: true,
+                          flatpickr_enable_time: true,
+                          flatpickr_mode: 'range',
+                          flatpickr_date_format: "Y-m-d H:i",
+                          flatpickr_min_Date: "today",
+                        } %>
+                    </div>
+                    <div class="end-time">
+                      <%= f.text_field :end_time, input_html: { id: "range_end" }, placeholder: "Closes", id: 'secondRangeInput' %>
+                    </div>
+                  </div>
+                </div>
+                <%= f.input :category, collection: List::CATEGORY %>
               </div>
-              <%= f.input :category, collection: List::CATEGORY %>
               <div class="alexis-submitbtn-create">
                 <%= f.submit %>
               </div>
             <% end %>
         </div>
-      </div>
-    </div>
-  </div>
 </div>
