--- a/app/assets/stylesheets/components/_login.scss
+++ b/app/assets/stylesheets/components/_login.scss
@@ -3,20 +3,13 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 80vh;
+  margin: 2rem;
 }
 
 .alexis-login-form-container {
-  background: #f12711;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #f5af19, #f12711);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #f5af19, #f12711);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  background: linear-gradient(to right, #010234, #3F1964);
   color: white;
-  height: 450px;
-  width: 350px;
+  padding: 20px 60px;
   border-radius: 20px;
 
   h2 {
