--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -14,3 +14,13 @@ $headers-font: "Nunito", "Helvetica", "sans-serif";
 //        font-url('FontFile.ttf') format('truetype')
 // }
 // $my-font: "Font Name";
+
+@font-face {
+  font-family: "Gilroy Medium";
+  src: font-url('Gilroy-Medium.otf');
+}
+
+@font-face {
+  font-family: "Gilroy Heavy";
+  src: font-url('Gilroy-Heavy.otf');
+}
