--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -63,7 +63,7 @@
 
 .shotgun-logo-navbar h3 {
   margin-bottom: 0;
-  font-family: 'Gilroy-HeavyItalic';
+  font-family: 'Gilroy-Bold';
   font-size: 35px;
   color: transparent;
   -webkit-text-stroke: 1px;
