--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 * {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy-Medium';
 }
 
 body {
@@ -124,7 +124,7 @@ a {
 
 .shotgun-cta h3 {
   margin-bottom: 0;
-  font-family: 'Gilroy-HeavyItalic';
+  font-family: 'Gilroy-Bold';
   font-size: 26px;
   -webkit-text-stroke: 1px;
   -webkit-text-stroke-color: white;
