--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -29,3 +29,8 @@ $headers-font: "Nunito", "Helvetica", "sans-serif";
   font-family: "Gilroy-Bold";
   src: font-url('Gilroy-Bold.ttf');
 }
+
+@font-face {
+  font-family: "Gilroy-HeavyItalic";
+  src: font-url('Gilroy-HeavyItalic.ttf');
+}
