--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -124,7 +124,7 @@ a {
 
 .shotgun-cta h3 {
   margin-bottom: 0;
-  font-family: 'Gilroy-Bold';
+  font-family: 'Gilroy-HeavyItalic';
   font-size: 26px;
   -webkit-text-stroke: 1px;
   -webkit-text-stroke-color: white;
