--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -4,3 +4,43 @@
   right: 16px;
   z-index: 1000;
 }
+
+#kill {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0;
+}
+.arti-alert {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 30%;
+  bottom: 30%;
+  width: 40%;
+  border-radius: 25px;
+  height: 33%;
+}
+
+.Arti-success {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 80%;
+  color: black;
+}
+
+@media screen and (max-width: 425px) {
+  .arti-alert {
+
+    left: 15%;
+    right: 15%;
+    bottom: 10%;
+    top: 20%;
+    width: 70%;
+    height: 70%;
+  }
+}
