--- a/app/assets/stylesheets/components/_create_list.scss
+++ b/app/assets/stylesheets/components/_create_list.scss
@@ -18,7 +18,7 @@
     color: white;
     text-align: center;
     font-weight: bolder;
-    font-family: 'Gilroy-Black';
+    font-family: 'Gilroy-Bold';
     margin: 0;
   }
 
@@ -98,6 +98,11 @@
     #DateBoxes {
       display: flex;
       flex-direction: column;
+
+      p {
+        font-size: medium;
+        font-size: 0.8rem;
+      }
 
       .datesetup {
         display: flex;
