--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,11 @@
+
 <div class="alexis-create-form-main-container">
   <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
+  <div class="top-container d-flex align-items-center w-85 mb-3">
+    <div class="back-to-list-btn w-50 d-flex align-items-center justify-content-start ">
+      <i class="fas fa-arrow-left"></i><%= link_to "Back to list", lists_path %>
+    </div>
+  </div>
         <div class="alexis-create-form-card">
           <div class="title mb-3">
             <h1>Create a new List</h1>
