title of the website and title in the navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shotgunz</title>
+    <title>Shotgunz | Be the first, everytime.</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
