--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -46,7 +46,7 @@
       <%= link_to lists_path do %>
         <div class="tanki-navbar-logo-container">
           <div class="shotgun-logo-navbar">
-            <h3>Shotgun</h3>
+            <h3>Shotgunz</h3>
           </div>
         </div>
       <% end %>
