--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -19,8 +19,10 @@
             <%= link_to "", list_path(list), class:"alexis-click"%>
             <div class="alexis-card-left-element">
               <%= link_to list.name, list_path(list) %>
-              <p>4 shotguns left out of 15</p>
-              <%= list.user.email %>
+              <div class="shotgunners-left">
+                <p><span><%= list.shotguns.count %> shotguns</span> left out of <span><%= list.places %></span></p>
+              </div>
+              <%= list.user.username %>
             </div>
             <div class="alexis-card-right-element">
               <p>8 minutes ago</p>
