--- a/app/views/lists/_lists.html.erb
+++ b/app/views/lists/_lists.html.erb
@@ -7,7 +7,13 @@
           <%= link_to "", list_path(list), class:"alexis-click"%>
           <div class="alexis-card-left-element">
             <%= link_to list.name, list_path(list) %>
-            <p>4 shotguns left out of 15</p>
+            <% if list.shotguns.count == 0 %>
+              <p><span><%= list.places %> shotguns available</span> out of <span><%= list.places %></span></p>
+            <% elsif list.shotguns.count > 0 && list.shotguns.count < list.places %>
+              <p><span><%= list.shotguns.count %> shotguns</span> out of <span><%= list.places %></span></p>
+            <% else %>
+              <p><span><%= list.shotguns.count%> / <%=list.places%></span> - Waiting List</p>
+            <% end %>
             <%= list.user.email %>
           </div>
           <div class="alexis-card-right-element">
