--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -11,8 +11,7 @@
       </div>
     </div>
   </div>
-    <div data-aos="flip-right" data-aos-delay="300">
-      <div class="alexis-create-form-card">
+      <div class="alexis-create-form-card" data-aos="flip-right" data-aos-delay="300">
         <div class="title mb-3">
           <h1>Create a new List</h1>
         </div>
@@ -47,5 +46,4 @@
             </div>
           <% end %>
       </div>
-    </div>
 </div>
