copy link to clipboard and new create btn

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -41,9 +41,9 @@
               </div>
               <%= f.input :category, collection: List::CATEGORY %>
             </div>
-            <div class="alexis-submitbtn-create">
-              <%= f.submit %>
-            </div>
-          <% end %>
+        </div>
+      <div class="shotgun-cta">
+        <%= f.submit %>
       </div>
+    <% end %>
 </div>
