--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -41,10 +41,10 @@
         </div>
         <div class="bottom-sharing-link-container d-flex align-items-center justify-content-center w-100 mb-1">
           <div class="sharing-link-container d-flex align-items-center justify-content-center">
-            <div data-controller="clipboard" data-clipboard-success-content="Copied!" class="sharing-link-tagline">
+            <div data-controller="clipboard" data-clipboard-success-content="Copied!" class="sharing-link-tagline" data-clipboard-success-value="Copied!">
               <input type="hidden" value='http://www.shotgunz.net/lists/<%=@list.id%>' data-clipboard-target="source" id="LinkInput">
               <div class="share-link-btn">
-                <button type="button" data-action="clipboard#copy" data-clipboard-target="button" class="sharing-link-logo d-flex align-items-center justify-content-center">
+                <button type="button" data-action="click->clipboard#copy" data-clipboard-target="button" class="sharing-link-logo d-flex align-items-center justify-content-center">
                 Share Link</button>
               </div>
             </div>
