--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -120,12 +120,16 @@ a {
   justify-content: center;
   align-items: center;
   box-shadow: 0px 0px 20px #F48DF0;
-}
-
-.shotgun-cta h3 {
-  margin-bottom: 0;
-  font-family: 'Gilroy-HeavyItalic';
-  font-size: 26px;
-  -webkit-text-stroke: 1px;
-  -webkit-text-stroke-color: white;
+  input,
+  h3 {
+    background-color: transparent;
+    margin-bottom: 0;
+    font-family: 'Gilroy-HeavyItalic';
+    font-size: 26px;
+    -webkit-text-stroke: 1px;
+    -webkit-text-stroke-color: white;
+    border: none;
+    padding: 0;
+    color: transparent;
+  }
 }
