--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -121,7 +121,8 @@ a {
   align-items: center;
   box-shadow: 0px 0px 20px #F48DF0;
   input,
-  h3 {
+  h3,
+  a {
     background-color: transparent;
     margin-bottom: 0;
     font-family: 'Gilroy-HeavyItalic';
