Create button and details

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,13 +3,13 @@
 
     <div class="alexis-marketplace-menu">
       <div class="marketplace-menu-element">
-        <button class='public' > public </button>
+        <button class='public' > Public </button>
       </div>
       <div class="marketplace-menu-element">
-        <button class='private' > private </button>
+        <button class='private' > My Lists </button>
       </div>
       <div class="marketplace-menu-element">
-        <button class='shotguns' > my shotguns </button>
+        <button class='shotguns' > My Shotguns </button>
       </div>
     </div>
     <div class="alexis-marketplace-lists-container">
