--- a/app/views/lists/_lists.html.erb
+++ b/app/views/lists/_lists.html.erb
@@ -1,6 +1,6 @@
   <% if lists.empty? %>
     <div class="marketplace-text-empty">
-      <h2>No list in this section.</h2>
+      <h2>No lists in this section 😭</h2>
     </div>
   <% else %>
     <% lists.reverse.each do |list|%>
