fix btn create bug and responsive create form with calendar

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -41,7 +41,7 @@
           </div>
         </div>
         <%= f.input :category, collection: List::CATEGORY %>
-        <div class="shotgun-cta">
+        <div class="alexis-submitbtn-create">
           <%= f.submit data: { disable_with: false } %>
         </div>
       </div>
