--- a/app/assets/stylesheets/components/_create_list.scss
+++ b/app/assets/stylesheets/components/_create_list.scss
@@ -12,7 +12,6 @@
   background: linear-gradient(to right, #010234, #3F1964);
   border-radius: 20px;
   padding: 20px 80px;
-  width: 60%;
 
   h1 {
     color: white;
@@ -59,16 +58,20 @@
   input {
     background-color: #B000B9;
     border: none;
-    color: white;
-    border-radius: 20px;
-    height: 40px;
-    width: 120px;
+    font-family: 'Gilroy-HeavyItalic';
+    font-size: 26px;
+    color: transparent;
+    -webkit-text-stroke: 1px;
+    -webkit-text-stroke-color: white;
+    border-radius: 40px;
+    padding: 5px 15px;
     transition: 0.2 ease-in-out;
   }
 
   input:hover {
     background-color: #b824c0;
     transform: scale(1.05);
+    box-shadow: 0px 0px 20px #F48DF0;
   }
 }
 
@@ -132,6 +135,12 @@
     .create-form-element {
       input {
         height: 20px;
+      }
+    }
+
+    .alexis-submitbtn-create {
+      input {
+        height: auto;
       }
     }
 
