--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -157,6 +157,7 @@
     overflow-y: scroll;
     color: white;
     margin-left: 10px;
+    width: 100%;
   }
 
   .shotgunners-list p .fas.fa-arrow-right {
