half of action cable

--- a/app/views/lists/_lists.html.erb
+++ b/app/views/lists/_lists.html.erb
@@ -1,5 +1,5 @@
   <% if lists.empty? %>
-    <%= "no!!!" %>
+    <%= "This list is empty" %>
   <% else %>
     <% lists.reverse.each do |list|%>
       <div class="alexis-marketplace-card">
