--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -21,6 +21,7 @@
           <%= f.input :description, as: :text, input_html: { maxlength: 280 }, label: "Description (Max. 280 Chars 🤓)" %>
           <%= f.input :places, as: :numeric, label: "Spots available 🏆" %>
           <%= f.input :prebookspot, as: :boolean %>
+          <%= f.input :public, as: :boolean %>
           <div id="DateBoxes">
             <p>Duration</p>
             <div class="datesetup">
@@ -40,10 +41,10 @@
             </div>
           </div>
           <%= f.input :category, collection: List::CATEGORY %>
+          <div class="shotgun-cta">
+            <%= f.submit %>
+          </div>
+          <% end %>
         </div>
     </div>
-    <div class="shotgun-cta">
-      <%= f.submit %>
-    </div>
-  <% end %>
 </div>
