btn show center

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -226,4 +226,11 @@
     -webkit-text-stroke-color: white;
     margin-bottom: 10px;
   }
+
+  // BTN SHOTGUN
+  .ced-btn-show{
+    display: flex;
+    justify-content: center;
+  }
+
 }
