--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -51,6 +51,6 @@
       </div>
     </div>
 </div>
-<div data-aos="fade-up-right" data-aos-delay="300">
+<div data-aos="fade-up-right" data-aos-delay="300" class="ced-btn-show">
   <%= check_shotgun_btn %>
 </div>
