--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,10 +1,11 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "navbar";
-@import "login";
-@import "signup";
-@import "forgetpassword";
-@import "marketplace";
+@import "chatroom";
 @import "create_list";
 @import "./config/fonts";
+@import "forgetpassword";
+@import "login";
+@import "marketplace";
+@import "navbar";
+@import "signup";
