--- a/app/views/shared/_lists.html.erb
+++ b/app/views/shared/_lists.html.erb
@@ -8,7 +8,7 @@
       <div class="alexis-marketplace-card-element">
         <%= link_to "", list_path(list), class:"alexis-click"%>
         <div class="alexis-card-left-element">
-          <%= link_to list.name, list_path(list) %>
+          <%= link_to list.name.titleize, list_path(list) %>
           <% if list.shotguns.count == 0 %>
             <p><span><%= list.places %> shotguns available</span> out of <span><%= list.places %></span></p>
           <% elsif list.shotguns.count > 0 && list.shotguns.count < list.places %>
@@ -16,7 +16,7 @@
           <% else %>
             <p><span><%= list.shotguns.count%> / <%=list.places%></span> - Waiting List</p>
           <% end %>
-          <%= list.user.email %>
+          <%= list.user.username.capitalize %>
         </div>
         <div class="alexis-card-right-element">
           <p><%=list.end_time.strftime('%D')%></p>
